--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 <body>
     <div class="splash1">
-        <h1>MedMind</h1>
+        <h1> <img src="/MedMind/img/logo 3.png" alt=""></h1>
     </div>
     <div class="fixed-top">
 
         <header>
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-dark">
-                    <a class="navbar-brand" href="#home">MedMind</a>
+                    <a class="navbar-brand" href="#home">MedRemind</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
                 <div class="row">
                     <div class="col-lg-6 align-item-center">
                         <div class="home-info">
-                            <h1>MedMind</h1>
+                            <h1>MedRemind</h1>
                             <h2>"Your Smart Medication Manager”</h2>
                             <p> A smart Medication Manager that helps users scan doctor prescriptions and automatically creates a medication schedule with reminders using a voice assistant.
                                  Scan. Schedule. Stay Healthy.</p>
@@ -261,14 +261,14 @@
 
     <footer>
         <div class="tagline">
-            <h1><span>MedMind</span> - Uniting Hearts for Good</h1>
+            <h1><span>MedRemind</span> - Uniting Hearts for Good</h1>
         </div>
         <div class="container">
             <div class="row">
 
                 <div class="col-lg-4">
                     <div class="col-one">
-                        <h4>MedMind</h4>
+                        <h4>MedRemind</h4>
                         <p>Address : Near T-Hub, Hitech-City, Hyderabad 440000 </p>
                         <p>Contact No : <a href="tel: +91 98659****59">+91 799****88</a></p>
                         <p>Email : <a href="mailto:foundation@code.com">ajabhishek986@gmail.com</a></p>
