--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="splash1">
-        <h1> <img src="/MedMind/img/logo 3.png" alt=""></h1>
+        <h1> <img src="./img/logo 3.png" alt=""></h1>
     </div>
     <div class="fixed-top">
 
